[package]
name = "e73-2g4m04s1d"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/e73-2g4m04s1d-rs"
license = "MIT OR Apache-2.0"
description = "Rust example programs running on the Ebyte E73-2G4M04S1D BLE module board (nRF51822-based)."
readme = "README.md"
edition = "2018"
keywords = ["example", "ebyte", "nrf51", "arm", "cortex-m"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/e73-2g4m04s1d-rs"
documentation = "https://docs.rs/e73-2g4m04s1d"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/e73-2g4m04s1d-rs", branch = "master" }

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6"
cortex-m-rt = "0.6.7"
nb = "0.1.1"
nrf51-hal = "0.6.0"
nrf51 = "0.6"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

[profile.release]
debug = true
lto = true